<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#1B1D2A"
    android:padding="20dp"
    android:gravity="center_horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:baselineAligned="false">

        <TextView
            android:id="@+id/tvCoins"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/coins_label"
            android:textColor="#FFD700"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginEnd="30dp"/>

        <TextView
            android:id="@+id/tvGems"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gems_label"
            android:textColor="#00E676"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:baselineAligned="false">

        <!-- Upgrade Health -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:background="#33FFFFFF"
            android:padding="15dp"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/health_upgrade_label"
                android:textColor="#FFFFFF"/>

            <Button
                android:id="@+id/btnBuyHp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buy_button_label"
                android:layout_marginTop="10dp"/>
        </LinearLayout>

        <!-- Upgrade Damage -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:background="#33FFFFFF"
            android:padding="15dp"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/damage_upgrade_label"
                android:textColor="#FFFFFF"/>

            <Button
                android:id="@+id/btnBuyDamage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buy_button_label"
                android:layout_marginTop="10dp"/>
        </LinearLayout>

        <!-- Upgrade Speed -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:background="#33FFFFFF"
            android:padding="15dp"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/speed_upgrade_label"
                android:textColor="#FFFFFF"/>

            <Button
                android:id="@+id/btnBuySpeed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buy_button_label"
                android:layout_marginTop="10dp"/>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_to_lobby"
        android:layout_marginTop="30dp"
        android:backgroundTint="#FF4757"/>

</LinearLayout>